force-app/main/default/objects/Lease__c/fields/Delay_Rental_Amount__c.field-meta.xml
<CustomField>
    <fullName>Delay_Rental_Amount__c</fullName>
    <label>Delay Rental Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>