force-app/main/default/objects/Lease__c/fields/Land_Parcel__c.field-meta.xml
<CustomField>
    <fullName>Land_Parcel__c</fullName>
    <label>Land Parcel</label>
    <referenceTo>Land_Parcel__c</referenceTo>
    <relationshipLabel>Leases</relationshipLabel>
    <relationshipName>Leases</relationshipName>
    <type>Lookup</type>
</CustomField>