force-app/main/default/objects/Lease__c/fields/Primary_Term_End__c.field-meta.xml
<CustomField>
    <fullName>Primary_Term_End__c</fullName>
    <label>Primary Term End</label>
    <type>Date</type>
</CustomField>