force-app/main/default/objects/Lease__c/fields/Revenue_Interest_Percent__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Interest_Percent__c</fullName>
    <label>Revenue Interest Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>