force-app/main/default/objects/Lease__c/fields/Royalty_Percent__c.field-meta.xml
<CustomField>
    <fullName>Royalty_Percent__c</fullName>
    <label>Royalty Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>