force-app/main/default/objects/Lease__c/fields/Working_Interest_Percent__c.field-meta.xml
<CustomField>
    <fullName>Working_Interest_Percent__c</fullName>
    <label>Working Interest Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>